# trolley-launcher

./: Cargo.toml  README.md  tauri.conf.json
src/: main.rs  settings.rs
src/games/: game.rs  mod.rs  ttcc.rs  ttr.rs  utils.rs
trolley-gui/: package-lock.json  package.json
