[package]
name = "trolley-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = { version = "0.4.4", features = ["tokio"] }
dirs = "5.0.1"
reqwest = {version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"
toml = "0.8.10"
